<resources>
    <string name="app_name">Chalo Chale Cab</string>
    <string name="navigation_drawer_open">Open navigation drawe</string>
    <string name="navigation_drawer_close">Close navigation drawe</string>
    <string name="verification_code">Verify OTP</string>
    <string name="map_key" translatable="false">AIzaSyDCcC5AZsRfJtE6Yspv8DBWww8i7IdE1QQ</string>
    <string name="direction_key" translatable="false">AIzaSyADxV6qHEQ1L6w3qLckcn5gFc5UmWa4k2w</string>



    <string name="invalid_PhoneNumber">Please enter valid mobile number</string>
    <string name="auto">Auto</string>
    <string name="Confirm_Cab">Confirm  Ride</string>
    <string name="Sedan">Sedan</string>
    <string name="Mini">Mini</string>
    <string name="don_t_have_an_account">Don\'t have account ?</string>
    <string name="chooseCab">Please choose a ride</string>

    <string name="razorpay_key_id">rzp_test_QQugGpcm7Ryo6t</string>
    <string name="razorpay_secret_key">PuXtTbeSbRVfM95b5QtzNzP4</string>
    <string name="paymentmode">Please select payment method</string>
    <string name="collect">Please Collect</string>
    <string name="thankyou">Thank You for using\n Chalo Chale Cab.</string>
    <string name="bycash">Pay by\n Cash</string>
    <string name="byonline">Pay by\n Online</string>
    <string name="yournumber">Your Number</string>
    <string name="sendotp">Send otp</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="submit">Submit</string>
    <string name="alert">Confirmation Alert</string>
    <string name="yes">CANCEL</string>
    <string name="no">NO</string>
    <string name="surefor">Please select a reason.Why you want to cancel the ride ?</string>
    <string name="yourlocation">Your Location...</string>
    <string name="yourdestination">Your destination...</string>
    <string name="requestcab">Request Cab</string>
    <string name="status">Status</string>
    <string name="trackuserloc">Track User Location</string>
    <string name="calldriver">Call User</string>
    <string name="otp">OTP</string>
    <string name="displaytrack">Display Track</string>
    <string name="endtrip">End Trip</string>
    <string name="requestfornewride">Request for New Ride</string>
    <string name="from">From :</string>
    <string name="to">To :</string>
    <string name="userno">Number :</string>
    <string name="accept">Accept</string>
    <string name="reject">Decline</string>
    <string name="support">Support</string>
    <string name="aboutus">About Us</string>
    <string name="shareapp">Share App</string>
    <string name="logout">Log Out</string>
    <string name="rejectride">Please select a reason.Why you want to reject the ride ?</string>
    <string name="reject1">Reject</string>
    <string name="ok">YES</string>
</resources>