<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_support"
        android:icon="@drawable/ic_football"
        android:title="@string/support" />
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_about"
        android:title="@string/aboutus" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/shareapp" />

    <item
        android:id="@+id/nav_update"
        android:icon="@drawable/ic_updated"
        android:title="Check for Update" />


    <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_clicker"
            android:title="@string/logout" />


</menu>