<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_trans">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <RelativeLayout
            android:background="@drawable/dialog_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp">


            <RelativeLayout
                android:id="@+id/rr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view1">

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/surefor"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="@dimen/_18sdp"
                    android:minHeight="@dimen/_50sdp"
                    android:textColor="#000"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="@dimen/_10sdp"
                    />

            </RelativeLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_below="@+id/rr"
                android:background="@color/grey_300" />

            <TextView
                android:id="@+id/tvNo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@null"
                android:gravity="center"
                android:text="@string/no"
                android:textStyle="bold"
                android:textColor="#FB4005"
                android:textSize="@dimen/_11sdp"
                android:layout_below="@+id/rr"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toRightOf="@+id/view4"
                android:layout_toEndOf="@+id/view4"
                />

            <View
                android:id="@+id/view4"
                android:layout_width="@dimen/_1sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_below="@+id/view"
                android:layout_centerHorizontal="true"
                android:background="@color/grey_300" />

            <TextView
                android:id="@+id/tvYes"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@null"
                android:gravity="center"
                android:layout_below="@+id/view"
                android:text="@string/yes"
                android:textColor="#DFA801"
                android:textStyle="bold"
                android:textSize="@dimen/_11sdp"
                android:layout_toLeftOf="@+id/view4"
                android:layout_toStartOf="@+id/view4"
                 />

        </RelativeLayout>



    </RelativeLayout>

    </ScrollView>

</LinearLayout>