<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp">
        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:padding="@dimen/_7sdp"
            android:tag="dw"
            app:srcCompat="@drawable/ic_back"
            tools:ignore="VectorDrawableCompat" />

    </LinearLayout>

    <fragment
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/driver_route"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <RelativeLayout
        android:id="@+id/driver_details"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#A39E9C9C"
            android:gravity="center"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="@dimen/_100sdp"
                android:orientation="vertical"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_height="wrap_content">
               <Button
                   android:id="@+id/showtrack"
                   android:background="#2196F3"
                   android:textStyle="bold"
                   android:textColor="#ffffff"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/displaytrack"/>
            </LinearLayout>


            <View
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_width="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="@dimen/_100sdp"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_height="wrap_content"
                tools:ignore="UseCompoundDrawables">
                <Button
                    android:id="@+id/endtrip"
                    android:background="#FA4911"
                    android:textStyle="bold"
                    android:textColor="#ffffff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/endtrip"/>
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/TaxiHorizontal"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_above="@+id/driver_details"
        android:layout_alignParentBottom="false"
        android:background="#C4959494"
        android:layout_height="@dimen/_40sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:id="@+id/call_user"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/driver_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_14sdp"
                        android:drawablePadding="@dimen/_5sdp"
                        android:drawableLeft="@drawable/ic_baseline_add_ic_call_24"
                        android:gravity="center"
                        android:textColor="#ffffff"
                        android:textStyle="bold"
                        android:text="@string/calldriver"/>
                </LinearLayout>

            <TextView
                android:id="@+id/otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textSize="@dimen/_14sdp"
                android:textColor="#ffffff"
                android:textAllCaps="true"
                android:layout_marginRight="@dimen/_10sdp"
                android:textStyle="bold"
                android:text="@string/otp"/>

        </LinearLayout>


    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/track_userLocation"
        android:layout_above="@+id/TaxiHorizontal"
        android:layout_alignParentBottom="false"
        android:background="#C4959494"
        android:layout_height="@dimen/_40sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/track_user"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/trackuserloc"
                    android:textStyle="bold"
                    android:drawablePadding="@dimen/_5sdp"
                    android:gravity="center"
                    android:drawableLeft="@drawable/ic_location_red"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="#ffffff"/>
            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_below="@+id/track_userLocation"
        android:layout_height="@dimen/_1sdp"
        android:background="#C3C1C1"/>

</RelativeLayout>

