<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_trans">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <RelativeLayout
            android:background="@drawable/dialog_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp">


            <RelativeLayout
                android:id="@+id/rr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view1">

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rejectride"
                    android:textStyle="bold"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="#FD480F"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="@dimen/_10sdp"
                    />

                <Spinner
                    android:layout_below="@+id/textView22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner_reject"
                    android:spinnerMode="dropdown"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@drawable/spinner" />

            </RelativeLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_below="@+id/rr"
                android:background="@color/grey_300" />

            <TextView
                android:id="@+id/tvNo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@null"
                android:gravity="center"
                android:text="@string/no"
                android:textStyle="bold"
                android:textColor="#02EC0C"
                android:textSize="@dimen/_11sdp"
                android:layout_below="@+id/rr"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toRightOf="@+id/view4"
                android:layout_toEndOf="@+id/view4"
                />

            <View
                android:id="@+id/view4"
                android:layout_width="@dimen/_1sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_below="@+id/view"
                android:layout_centerHorizontal="true"
                android:background="@color/grey_300" />

            <TextView
                android:id="@+id/tvReject"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@null"
                android:gravity="center"
                android:layout_below="@+id/view"
                android:text="@string/reject1"
                android:textColor="#F63E03"
                android:textStyle="bold"
                android:textSize="@dimen/_11sdp"
                android:layout_toLeftOf="@+id/view4"
                android:layout_toStartOf="@+id/view4"
                 />

        </RelativeLayout>



    </RelativeLayout>

    </ScrollView>

</LinearLayout>